--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Sebrae - Jogo da Memória">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>memoria</title>
+  <title>SEBRAE TEENS - Jogo da Memória</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
