--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
   </style>
 </head>
 <body>
-  <span class="loader"></span>
+  <div class="container">
+    <div class="loader"></div>
+  </div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
