--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
   <title>memoria</title>
   <link rel="manifest" href="manifest.json">
   <style>
+    .container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      position: relative;
+    }
     .loader {
     border: 24px solid;
     border-color: rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.35) rgba(255, 255, 255, 0.5);
