--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="loader"></div>
+    <span class="loader"></span>
   </div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
