--- a/index.html
+++ b/index.html
@@ -31,13 +31,6 @@
   <title>memoria</title>
   <link rel="manifest" href="manifest.json">
   <style>
-        .container{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      position: relative;
-    }
     .loader {
     border: 24px solid;
     border-color: rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.35) rgba(255, 255, 255, 0.5);
@@ -66,10 +59,10 @@
   
   </style>
 </head>
-<body bgcolor="white">
-  <div class="container">
-    <div class="loader"></div>
-  </div>
+<body bgcolor="grey">
+
+    <span class="loader"></span>
+
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
