--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   
   </style>
 </head>
-<body bgcolor="green">
+<body bgcolor="#FEE9c7">
 <div class="container">
     <span class="loader"></span>
 </div>
