--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="SEBRAE - Jogo da Memória">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="memoria">
+  <meta name="apple-mobile-web-app-title" content="SEBRAE - Jogo da Memória">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>memoria</title>
+  <title>SEBRAE - Jogo da Memória</title>
   <link rel="manifest" href="manifest.json">
   <style>
         .container{
