--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     .loader {
     border: 24px solid;
-    border-color: rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.35) rgba(255, 255, 255, 0.5);
+    border-color: rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.5);
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
@@ -50,16 +50,16 @@
 
 @keyframes animloader {
     0% {
-      border-color: rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.35) rgba(255, 255, 255, 0.75);
+      border-color: rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.75);
 }
     33% {
-      border-color: rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.35);
+      border-color: rgba(128, 0, 128, 0.75) rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35);
 }
     66% {
-      border-color: rgba(255, 255, 255, 0.35) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.25);
+      border-color: rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.75) rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25);
 }
     100% {
-      border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.35) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.15);
+      border-color: rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.75) rgba(128, 0, 128, 0.15);
 }
   }
   
@@ -67,7 +67,7 @@
   
   </style>
 </head>
-<body bgcolor="green">
+<body bgcolor="#FEE9c7">
 <div class="container">
     <span class="loader"></span>
 </div>
