--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="SEBRAE - Jogo da Memória">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="memoria">
+  <meta name="apple-mobile-web-app-title" content="SEBRAE - Jogo da Memória">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>memoria</title>
+  <title>SEBRAE - Jogo da Memória</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+        .container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      position: relative;
+    }
+    .loader {
+    border: 24px solid;
+    border-color: rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.5);
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: animloader 1s linear infinite;
+  }
+
+@keyframes animloader {
+    0% {
+      border-color: rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.75);
+}
+    33% {
+      border-color: rgba(128, 0, 128, 0.75) rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35);
+}
+    66% {
+      border-color: rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.75) rgba(128, 0, 128, 0.15) rgba(128, 0, 128, 0.25);
+}
+    100% {
+      border-color: rgba(128, 0, 128, 0.25) rgba(128, 0, 128, 0.35) rgba(128, 0, 128, 0.75) rgba(128, 0, 128, 0.15);
+}
+  }
+  </style>
 </head>
-<body>
+
+<body bgcolor="#FEE9c7">
+<div class="container">
+    <span class="loader"></span>
+</div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
